--- a/src/Components/UI/button/MyButton.module.css
+++ b/src/Components/UI/button/MyButton.module.css
@@ -1,8 +1,10 @@
 .myBtn {
     padding: 5px 15px;
-    color: teal;
+    margin-top: 5px;
+    color: rgb(255, 255, 255);
     font-size: 14px;
+    font-weight: bold;
     background: transparent;
-    border: 1px solid teal;
+    border: 4px solid rgb(255, 255, 255);
     cursor: pointer;
 }
