--- a/src/Components/UI/input/MyInput.module.css
+++ b/src/Components/UI/input/MyInput.module.css
@@ -2,5 +2,11 @@
     width: 100%;
     padding: 5px 15px;
     margin: 5px 0;
-    border: 1px solid teal;
+    border: 4px solid rgb(255, 255, 255);
+    background: transparent;
+    color: white;
+}
+
+::placeholder {
+    color: white;
 }
