--- a/src/Styles/App.css
+++ b/src/Styles/App.css
@@ -1,3 +1,30 @@
+
+
+body {
+	background: url('intro.jpg') center;
+	background-repeat: no-repeat;
+	background-size: cover;
+	background-attachment: fixed;
+	min-height: 100vh;
+	overflow-x: hidden;
+	margin-right: calc(-1 * (100vw - 100%));
+	overflow: overlay;
+}
+
+body::-webkit-scrollbar {
+	width: 12px;               /* width of the entire scrollbar */
+  }
+  
+  body::-webkit-scrollbar-track {
+	background: rgb(228, 227, 224);        /* color of the tracking area */
+  }
+  
+  body::-webkit-scrollbar-thumb {
+	background-color: rgb(255, 255, 255);    /* color of the scroll thumb */
+	border-radius: 20px;       /* roundness of the scroll thumb */
+	border: 3px solid rgb(255, 255, 255);  /* creates padding around scroll thumb */
+  }
+
 * {
 	margin: 0;
 	padding: 0;
@@ -10,14 +37,18 @@
 }
 
 .App {
-	width: 800px;
+	width: 900px;
 }
 
 .post {
 	display: flex;
 	padding: 15px;
-	border: 2px solid teal;
+	border: 2px solid rgb(255, 255, 255);
 	margin-top: 15px;
 	justify-content: space-between;
 	align-items: center;
+}
+.post__content {
+	color: white;
+	font-family: 'Kaushan Script' cursive;
 }
